[Changes for 0.69 - Adam Kennedy]

* Refactoring Module::Install::Admin::Metadata

* Add 'share' to the list of directories automatically no_index'ed

* license_from correctly marks "GNU lesser public license" as lgpl,
  not gpl [rt.cpan.org 24635] (AVAR)

[Changes for 0.68 - Ricardo SIGNES]

* The author entry in META.yml is now a sequence, as required

[Changes for 0.67 - Adam Kennedy]

* Tweaked the license detection code a bit

* Previous changes working well, going production

[Changes for 0.66_02 - Adam Kennedy]

* Adding detection of 'proprietary' license.

* "All rights reserved" clashes with or can invalidate most Open Source
  licenses. Adding a warning to this effect.

[Changes for 0.66_01 - 2007-03-15]

* Adding tests_recursive to have M:I search for and explicitly list
  all test scripts recursively.

* Adding configure_requires, test_requires and install_requires.
  These are currently aliases for build_requires but will later result
  in alternative consequences internally (ADAMK)

* Reorganising Module::Install::With on the assumption that CPAN.pm will
  be implementing PERL5_CPAN_IS_EXECUTING.

[Changes for 0.65 - 2007-03-06]

* Add install_as_core, install_as_cpan, install_as_vendor
  commands to control the "installdirs" metadata field.
  Requested by: Tels (renamed by ADAMK and AUDREYT)

* Add the preop command for users to customize the PREOP rule. (BINGOS) 

* Implement support for $ENV{PERL5_CPANPLUS_IS_EXECUTING} in the
  experimental Module::Install::With. (ADAMK)

* Remove the use of features in the Module::Install Makefile.PL.
  Developers should be quite capable of installing them all. (ADAMK)

* Remove the use of auto_provides in Module::Install Makefile.PL
  until we fix it to not break without a pre-existing MANIFEST. (ADAMK)

* YAML::Tiny is now used as a fallback for generating META.yml. The
  order of precedence is now YAML::Syck, YAML::Tiny, then YAML.

* META.yml output is now conformant to spec 1.3.
