@@ -1,6 +1,6 @@
 package Module::Install::Base;
 
-$VERSION = '0.68';
+$VERSION = '0.69';
 
 # Suspend handler for "redefined" warnings
 BEGIN {
